[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator module for the A-Maze-Ing project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]